--- a/Backend/health-care/build.gradle
+++ b/Backend/health-care/build.gradle
@@ -1,7 +1,22 @@
+buildscript {
+	dependencies {
+		classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.1"
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'idea'
+}
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.healthCareApp.healthcare.HealthCareApplication'
+		)
+	}
 }
 
 group = 'com.healthCareApp'
