--- a/Backend/health-care/build.gradle
+++ b/Backend/health-care/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	}
 	// https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
 	compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 }
 
 test {
