--- a/Backend/health-care/src/main/resources/application.properties
+++ b/Backend/health-care/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.username=postgres
+spring.datasource.password=sant123
+spring.jpa.generate-ddl=true
+server.port=8081\
+   
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+# Core answers
 
